--- a/.github/workflows/pr-product-service.yml
+++ b/.github/workflows/pr-product-service.yml
@@ -11,7 +11,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./frontend
     strategy:
       matrix:
         node-version: [14.x]
@@ -20,17 +22,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      working-directory: ./product-service
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install packages
-      working-directory: ./product-service
       run: npm ci
     - name: Build app
-      working-directory: ./product-service
       run: npm run build --if-present
     - name: Test app
-      working-directory: ./product-service
       run: npm test
