--- a/report-service/package.json
+++ b/report-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "report-service",
+  "name": "order-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -24,9 +24,13 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/typeorm": "^8.0.1",
+    "dotenv": "^10.0.0",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^7",
+    "typeorm": "^0.2.36"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -34,7 +38,7 @@
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.36",
+    "@types/node": "^14.17.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
