--- a/agent-web/package.json
+++ b/agent-web/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.13",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
